docs: rewrite CLAUDE.md as main project doc, clean up TO-DOS.md
CLAUDE.md now covers full system architecture, MCP-server location
and usage, auto-discovery workflow, visual testing cycle.
TO-DOS.md merged with root roadmap, removed completed granular tasks.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>